# Incremental-aff-cpd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ipca_aff_cpd.cpp  ipca_aff_cpd.hpp  ipca_aff_cpd.py  ipca_aff_cpd_wrap.cpp  sample.py  setup.py
ffstream_cpp/: DESCRIPTION  README.md  aff.cpp  aff.hpp  aff_wrap.cpp  affcd.cpp  affcd.hpp  detector.cpp  detector.hpp  fff.cpp  fff.hpp  sample.py  utils.cpp  utils.hpp
notebooks/: WIDSM.ipynb
